Make SwatFrameDisclosure suck less. The animation no longer jumps 32px at the end, and no longer cuts off the negative margins of the footer form field during animation.
svn commit r69683

--- a/www/styles/swat-frame-disclosure.css
+++ b/www/styles/swat-frame-disclosure.css
@@ -24,3 +24,8 @@
 .swat-disclosure-control-opened .swat-frame-disclosure-container {
 	border: 0;
 }
+
+.swat-frame-disclosure-control-opened,
+.swat-frame-disclosure-control-closed {
+	min-height: 0;
+}
